tests/snapshots/integration_test__log_data@d022cae295b6e2c0d9d469924d6c104d.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test3.log:14"
expression: result
info: "node=auditdtest.a1959.org type=PROCTITLE msg=audit(1451781471.394:194440): proctitle=737368643A206275726E205B707269765D"
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194440,
  "node": "auditdtest.a1959.org",
  "fields": {
    "proctitle": "sshd: burn [priv]"
  }
}
