tests/snapshots/integration_test__log_data@d191a7c64c19658e1217c61353ae3f86.snap
---
source: tests/integration_test.rs
expression: record
info: "type=AVC msg=audit(1524662933.080:61207): perm=9"
---
{
  "record_type": "AVC",
  "timestamp": 1524662933080,
  "id": 61207,
  "fields": {
    "perm": [
      "exec",
      "attr"
    ]
  }
}
