tests/snapshots/integration_test__log_data@d4f98f675cc01c6ece70333df9b3c43a.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-user-auth.log:1"
expression: result
info: "type=USER_AUTH msg=audit(1670424651.175:10465161): pid=1932610 uid=0 auid=4294967295 ses=4294967295 subj=/usr/sbin/cupsd (enforce) msg='op=PAM:authentication grantors=pam_permit acct=\"user\" exe=\"/usr/sbin/cupsd\" hostname=localhost addr=::1 terminal=cups res=success'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "Err": {
    "Parse": "error Eof at:  (enforce) msg='op=PAM:authentication grantors=pam_permit acct=\"user\" exe=\"/usr/sbin/cupsd\" hostname=localhost addr=::1 terminal=cups res=success'\u001dUID=\"root\" AUID=\"unset\""
  }
}
