tests/snapshots/integration_test__log_data@db07a15ff44f9d6156082aa71b4cd584.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-user-auth-2.log:1"
expression: result
info: "type=USER_AUTH msg=audit(1670330949.860:161339): pid=5519 uid=0 auid=4294967295 ses=4294967295 msg='op=PAM:authentication grantors=? acct=\"system-property('xsl:vendor')/>\" exe=\"/usr/bin/python3.8\" hostname=? addr=? terminal=? res=failed'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "Err": {
    "Parser": {
      "Parse": "error Eof at: xsl:vendor')/>\" exe=\"/usr/bin/python3.8\" hostname=? addr=? terminal=? res=failed'\u001dUID=\"root\" AUID=\"unset\""
    }
  }
}
