tests/snapshots/integration_test__log_data@dbd8170a1af545e74db9051c02642a13.snap
---
source: tests/integration_test.rs
expression: record
info: "type=CWD msg=audit(1481077231.371:479):  cwd=\"/home/andrew_kroh\""
---
{
  "record_type": "CWD",
  "timestamp": 1481077231371,
  "id": 479,
  "fields": {
    "cwd": "/home/andrew_kroh"
  }
}
